se realizan ajustes y se versiona el manejo de errores para el inicio de sesion